<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/Main_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottommenu"
        android:layout_alignParentTop="true" >
 		
        <LinearLayout
            android:id="@+id/Main_LinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:src="@drawable/logo" />

            <TableLayout
                android:id="@+id/TableLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:paddingTop="20dip"
                android:shrinkColumns="1"
                android:stretchColumns="1" >
			
                <TableRow android:paddingTop="15dip" >

                    <TextView
                        android:id="@+id/TextView01"
                        android:padding="10dip"
                        android:text="@string/user_code_text"
                        android:textColor="@drawable/black"
                        android:textSize="18sp"
                        android:singleLine="true" >
                    </TextView>

                    <EditText
                        android:id="@+id/user_code"
                        android:hint="@string/username_hint"
                        android:padding="10dip"
                        android:textSize="16sp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow android:paddingTop="15dip" >

                    <TextView
                        android:id="@+id/TextView02"
                        android:padding="10dip"
                        android:text="@string/password_text"
                        android:textColor="@drawable/black"
                        android:textSize="18sp" 
                        android:singleLine="true">
                    </TextView>

                    <EditText
                        android:id="@+id/user_pwd"
                        android:hint="@string/password_hint"
                        android:padding="10dip"
                        android:password="true"
                        android:textSize="16sp"
                        android:singleLine="true" />
                </TableRow>

                <TableRow
                    android:gravity="center"
                    android:paddingTop="10dip" >

                    <CheckBox
                        android:id="@+id/remember_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/rememberpwd_text"
                        android:textColor="@drawable/black" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/bottommenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="10dip" >

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/login_text" >
        </Button>

        <Button
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setting_text" >
        </Button>
    </LinearLayout>

            
</RelativeLayout>
