<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff">

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingScroll2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context=".activity.LoginActivity01" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
   >

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:src="@drawable/login" />

        <TableLayout
            android:id="@+id/login_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="20dip"
            android:paddingRight="20dip"
            android:paddingTop="100dip"
            android:shrinkColumns="1"
            android:stretchColumns="1" >

            <TableRow android:paddingTop="15dip" >

                <TextView
                    android:id="@+id/user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#E4E8E9"
                    android:padding="5dip"
                    android:text="@string/user_code_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/user_code"
                    android:ems="10"
                    android:hint="@string/username_hint"
                    android:padding="10dip"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow android:paddingTop="15dip" >

                <TextView
                    android:id="@+id/pwd_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#E4E8E9"
                    android:padding="5dip"
                    android:text="@string/password_text"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/user_pwd"
                    android:hint="@string/password_hint"
                    android:padding="10dip"
                    android:password="true"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:id="@+id/login_linear"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/login_table"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/remember_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rememberpwd_text" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="34dp"
                android:background="#EE9700"
                android:padding="8dp"
                android:text="@string/login_text"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/resetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="#EE9700"
                android:padding="8dp"
                android:text="@string/setting_text"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>
</LinearLayout>
