<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="@drawable/usp_navigation_itme_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/usp_navigation_bottom"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:gravity="left" >

        <TextView
            android:id="@+id/usp_navigation_logout"
            style="@style/navigation_drawer_item_text"
            android:layout_marginLeft="20dp"
            android:drawableLeft="@drawable/usp_navigation_logout"
            android:drawablePadding="10dp"
            android:text="@string/navigation_logout" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/usp_navigation_bottom"
        android:layout_gravity="center"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- 用户信息 -->

        <LinearLayout
            style="@style/navigation_line_style"
            android:background="@color/navigation_quick_bg"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/usp_navigation_login_code"
                style="@style/navigation_drawer_title"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:drawableLeft="@drawable/usp_navigation_head_icon"
                android:drawablePadding="5dp" />

            <TextView
                style="@style/navigation_drawer_title"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:text="@string/navigation_welcome" />
        </LinearLayout>

        <!-- 用户详细信息 -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <LinearLayout style="@style/navigation_line_text_layout" >

                <TextView
                    style="@style/navigation_drawer_text"
                    android:text="@string/navigation_opername" />

                <TextView
                    android:id="@+id/usp_navigation_oper_name"
                    style="@style/navigation_drawer_text"
                    android:layout_marginLeft="5dp"
                    android:text="@string/navigation_welcome" />
            </LinearLayout>

            <LinearLayout style="@style/navigation_line_text_layout" >

                <TextView
                    style="@style/navigation_drawer_text"
                    android:text="@string/navigation_operdept" />

                <TextView
                    android:id="@+id/usp_navigation_oper_dept"
                    style="@style/navigation_drawer_text"
                    android:layout_marginLeft="5dp"
                    android:text="@string/navigation_welcome" />
            </LinearLayout>
        </LinearLayout>

        <!-- 快速导航 -->

        <LinearLayout
            style="@style/navigation_line_style"
            android:background="@color/navigation_quick_bg"
            android:orientation="horizontal" >

            <TextView
                style="@style/navigation_drawer_title"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/navigation_quick" />
        </LinearLayout>

        <!-- 菜单选项 -->

        <ScrollView
            android:id="@+id/usp_navigation_operGroup"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <!-- 营销签到 -->

                <RelativeLayout
                    android:id="@+id/navigation_btn_signin"
                    style="@style/navigation_drawer_item_layout" >

                    <TextView
                        android:id="@+id/navigation_item_signin"
                        style="@style/navigation_drawer_item_text"
                        android:drawableLeft="@drawable/usp_navigation_itme_singin"
                        android:text="@string/navigation_item_text_signin" />

                    <include layout="@layout/usp_navigation_arrow" />
                </RelativeLayout>

                <ImageView
                    style="@style/navigation_drawer_item_line"
                    android:contentDescription="@string/app_name" />

                <!-- 扫一扫 -->

                <RelativeLayout
                    android:id="@+id/navigation_btn_sca"
                    style="@style/navigation_drawer_item_layout" >

                    <TextView
                        android:id="@+id/navigation_item_sca"
                        style="@style/navigation_drawer_item_text"
                        android:drawableLeft="@drawable/usp_navigation_itme_sca"
                        android:text="@string/navigation_item_text_scan" />

                    <include layout="@layout/usp_navigation_arrow" />
                </RelativeLayout>

                <ImageView
                    style="@style/navigation_drawer_item_line"
                    android:contentDescription="@string/app_name" />

                <!-- 拍照上传 -->

                <RelativeLayout
                    android:id="@+id/navigation_btn_photo"
                    style="@style/navigation_drawer_item_layout" >

                    <TextView
                        android:id="@+id/navigation_item_photo"
                        style="@style/navigation_drawer_item_text"
                        android:drawableLeft="@drawable/usp_navigation_itme_photo"
                        android:text="@string/navigation_item_text_photo" />

                    <include layout="@layout/usp_navigation_arrow" />
                </RelativeLayout>

                <ImageView
                    style="@style/navigation_drawer_item_line"
                    android:contentDescription="@string/app_name" />

                <!-- 修改密码 -->

                <RelativeLayout
                    android:id="@+id/navigation_btn_changepwd"
                    style="@style/navigation_drawer_item_layout" >

                    <TextView
                        android:id="@+id/navigation_item_changepwd"
                        style="@style/navigation_drawer_item_text"
                        android:drawableLeft="@drawable/usp_navigation_item_changepwd"
                        android:text="@string/navigation_item_text_changepwd" />

                    <include layout="@layout/usp_navigation_arrow" />
                </RelativeLayout>

                <ImageView
                    style="@style/navigation_drawer_item_line"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>